# pubmed-digest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  models.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC.md
docs/adr/: 0001-metadata-first-retrieval.md  0001-toolchain.md  0002-structured-output-grounding.md  0003-model-routing-policy.md  0004-reproducible-benchmark-methodology.md  0005-toolchain.md
evals/: README.md  __init__.py  benchmark.py
evals/examples/: stub-results.md
evals/fixtures/: README.md  queries.jsonl
evals/fixtures/golden/: glp1_cv_outcomes.json  pmm2_biomarkers_small_n.json  unsupported_glp1_alzheimers_claim.json
evals/results/: results-2026-05-04.md
src/fabrica/: __init__.py
src/pubmed_digest/: __init__.py  config.py  eval_fixtures.py
src/pubmed_digest/digest/: __init__.py  schema.py
tests/: test_config.py  test_digest_schema.py  test_eval_fixtures.py  test_smoke.py
