[project]
name = "pubmed-digest"
version = "0.1.0"
description = "Biotech literature summarization CLI with metadata-first retrieval, structured outputs, and frozen-fixture model benchmarks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Luke Marshall", email = "99937587+elukemarshall@users.noreply.github.com" }
]
keywords = ["biotech", "pubmed", "literature", "summarization", "rag", "llm"]
dependencies = []

[project.urls]
Homepage = "https://github.com/elukemarshall/pubmed-digest"
Repository = "https://github.com/elukemarshall/pubmed-digest"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.12",
    "pyright>=1.1.400",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pubmed_digest"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "PTH", "TID", "TC",
]

[tool.pyright]
include = ["src", "tests", "evals"]
extraPaths = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
